try javaOptions